[gd_scene load_steps=4 format=2]

[ext_resource path="res://states/Game/ParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://states/MainMenu/OptionsMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
script = ExtResource( 3 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="C" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="V" type="VBoxContainer" parent="C"]
margin_left = 231.0
margin_top = 336.0
margin_right = 488.0
margin_bottom = 624.0
custom_constants/separation = 12

[node name="GodotJumpTitle" type="Label" parent="C/V"]
margin_right = 257.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="C/V"]
margin_top = 88.0
margin_right = 257.0
margin_bottom = 236.0

[node name="Buttons" type="VBoxContainer" parent="C/V/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 250.0
margin_bottom = 141.0

[node name="FullscreenButton" type="CheckButton" parent="C/V/PanelContainer/Buttons"]
margin_right = 243.0
margin_bottom = 42.0
text = "Fullscreen"

[node name="SoundButton" type="CheckButton" parent="C/V/PanelContainer/Buttons"]
margin_top = 46.0
margin_right = 243.0
margin_bottom = 88.0
text = "Sound"

[node name="MusicButton" type="CheckButton" parent="C/V/PanelContainer/Buttons"]
margin_top = 92.0
margin_right = 243.0
margin_bottom = 134.0
text = "Music"

[node name="OptionsBackButton" type="Button" parent="C/V"]
margin_left = 88.0
margin_top = 248.0
margin_right = 169.0
margin_bottom = 288.0
size_flags_horizontal = 4
text = "Back"

[connection signal="toggled" from="C/V/PanelContainer/Buttons/FullscreenButton" to="." method="_on_FullscreenButton_toggled"]
[connection signal="toggled" from="C/V/PanelContainer/Buttons/SoundButton" to="." method="_on_SoundButton_toggled"]
[connection signal="toggled" from="C/V/PanelContainer/Buttons/MusicButton" to="." method="_on_MusicButton_toggled"]
[connection signal="pressed" from="C/V/OptionsBackButton" to="." method="_on_OptionsBackButton_pressed"]
